k8s/gateway-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-app
spec:
  selector:
    matchLabels:
      app: gateway-app
  template:
    metadata:
      labels:
        app: gateway-app
    spec:
      containers:
        - name: gateway-app
          image: 560914023379.dkr.ecr.us-east-2.amazonaws.com/netsepio-gateway
          resources:
            limits:
              memory: "200Mi"
              cpu: "200m"
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: "/app/.env"
              subPath: ".env"
              name: env-file
              readOnly: true

      volumes:
        - name: env-file
          secret:
            secretName: gateway-env-secret
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: NodePort
  selector:
    app: gateway-app
  ports:
    - port: 3000
      targetPort: 3000
